@@ -173,6 +173,7 @@ enum ResultCode {
   INVALID_TABLE_PROPERTY                = 1004; // SQLState: ? - Invalid Table Property
   MISSING_TABLE_PROPERTY                = 1005; // SQLState: ? - Missing table property
   INVALID_TABLESPACE_URI                = 1006;
+  UNREMOVABLE_TABLE_PROPERTY            = 1007;
 
   // Client Connection
   CLIENT_CONNECTION_EXCEPTION           = 1101; // SQLState: 08000 - Client connection error
