@@ -21,6 +21,8 @@ Release 0.12.0 - unreleased
 
   IMPROVEMENT
 
+    TAJO-2170: Disable unsetting timezone property. (Lee Dongjin via jinho)
+
     TAJO-2175: Fix some glitches in source code. (Lee Dongjin via jihoon)
 
     TAJO-2146: Fragment interface cleanup. (jihoon)
